--- a/project_tracker/templates/project/project_list.html
+++ b/project_tracker/templates/project/project_list.html
@@ -1,4 +1,5 @@
 {% extends "project/dashboard.html" %}
+{% load project_filters %}
 
 {% block title %}Project List{% endblock %}
 
@@ -22,10 +23,17 @@
 <div id="projects-container" class="project-grid">
     {% for project in projects %}
     <div class="project-card">
-        <a href="{% url 'edit_project' project.id %}">
-            <h5>{{ project.title }}</h5>
+        <a href="{% url 'edit_project' project.id %}" 
+            data-toggle="tooltip" 
+            data-placement="top"
+            title="{{ project.title }}">
+            <h5>{{ project.title|truncate_chars:50 }}</h5>
         </a>
-        <p>{{ project.description }}</p>
+        <p data-toggle="tooltip" 
+            data-placement="top"
+            title="{{ project.description }}">
+            {{ project.description|truncate_chars:150 }}
+        </p>
         <p>Status: {{ project.get_state_display }}</p>
     </div>
     {% endfor %}
@@ -41,8 +49,16 @@
     <tbody>
         {% for project in projects %}
         <tr>
-            <td><a href="{% url 'edit_project' project.id %}">{{ project.title }}</a></td>
-            <td>{{ project.description }}</td>
+            <td><a href="{% url 'edit_project' project.id %}" 
+                data-toggle="tooltip" 
+                data-placement="top"
+                title="{{ project.title }}">
+                {{ project.title|truncate_chars:50 }}</a></td>
+            <td data-toggle="tooltip"
+                data-placement="top" 
+                title="{{ project.description }}">
+                {{ project.description|truncate_chars:150 }}
+            </td>
             <td>{{ project.get_state_display }}</td>
         </tr>
         {% endfor %}
@@ -63,6 +79,14 @@
         const isChecked = this.checked;
         document.getElementById('projects-container').style.display = isChecked ? 'none' : 'flex';
         document.getElementById('projects-table').style.display = isChecked ? 'table' : 'none';
+    });
+
+    // Enable tooltips
+    document.addEventListener('DOMContentLoaded', function () {
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-toggle="tooltip"]'))
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+            return new bootstrap.Tooltip(tooltipTriggerEl)
+        })
     });
 </script>
 {% endblock %}
