--- a/project_tracker/templates/project/public_list.html
+++ b/project_tracker/templates/project/public_list.html
@@ -1,4 +1,6 @@
 {% extends "project/dashboard.html" %}
+{% load project_filters %}
+
 {% block title %}Public Projects{% endblock %}
 {% block middle_column %}
 <div class="project-count">
@@ -19,10 +21,10 @@
 <div id="projects-container" class="project-grid">
     {% for project in projects %}
     <div class="project-card">
-        <h5>{{ project.title }}</h5>
-        <p>{{ project.description }}</p>
+        <h5 data-toggle="tooltip" title="{{ project.title }}">{{ project.title|truncate_chars:50 }}</h5>
+        <p data-toggle="tooltip" title="{{ project.description }}">{{ project.description|truncate_chars:150 }}</p>
         <p>Status: {{ project.get_state_display }}</p>
-        <p>From: {{ project.owner.first_name }}</p>
+        <p>Creator: {{ project.owner.first_name }}</p>
     </div>
     {% endfor %}
 </div>
@@ -32,14 +34,15 @@
             <th>Title</th>
             <th>Description</th>
             <th>Status</th>
-            <th>From:></th>
+            <th>Creator></th>
         </tr>
     </thead>
     <tbody>
         {% for project in projects %}
         <tr>
-            <td>{{ project.title }}</td>
-            <td>{{ project.description }}</td>
+            <td data-toggle="tooltip" title="{{ project.title }}">{{ project.title|truncate_chars:50 }}</td>
+            <td data-toggle="tooltip" title="{{ project.description }}">{{ project.description|truncate_chars:100 }}
+            </td>
             <td>{{ project.get_state_display }}</td>
             <td>{{ project.owner.first_name }}</td>
         </tr>
@@ -50,6 +53,13 @@
 
 {% block extra_js %}
 <script>
+    // Enable tooltips
+    document.addEventListener('DOMContentLoaded', function() {
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-toggle="tooltip"]'))
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+            return new bootstrap.Tooltip(tooltipTriggerEl)
+        })
+    });
     // Display current date
     const currentDateElement = document.getElementById('current-date');
     if (currentDateElement) {
