--- a/project_tracker/templates/project/dashboard.html
+++ b/project_tracker/templates/project/dashboard.html
@@ -11,43 +11,112 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"
         rel="stylesheet">
     <style>
+        :root {
+            --deep-navy: #292f56;
+            --plum-purple: #844273;
+            --coral-pink: #cf6364;
+            --golden-amber: #e2a946;
+            --lime-green: #acfa70;
+            --pure-white: #ffffff;
+            --pure-black: #000000;
+
+        }
+
+        html,
         body {
-            background-color: #e8f5e9;
-            /* Light mint color */
+            height: 100%;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+
+
+        body {
+            background-color: var(--deep-navy);
+            color: var(--white);
+        }
+
+        .content-area {
+            height: 100%;
+            overflow-y: auto;
+        }
+
+        .project-card a {
+            text-decoration: none;
+            color: var(--pure-white);
+            transition: color 0.3s ease;
+        }
+
+        .project-card a:hover,
+        .project-card a:focus {
+            color: var(--lime-green);
+        }
+
+        .project-card h5 {
+            color: var(--pure-white);
+            margin-bottom: 0;
+        }
+
+        .text-muted {
+            color: var(--lime-green) !;
+        }
+
+        .column,
+        .project-card,
+        .comment-card,
+        .profile-pic-container {
+            border-radius: 15px;
+            background-color: var(--plum-purple);
+            box-shadow: 0 4px 8px var(--deep-navy);
+            padding: 20px;
         }
 
         .column {
-            border-radius: 15px;
-            background-color: #ffffff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 20px;
             margin: 10px 0;
         }
 
-        .profile-pic {
+        .profile-pic,
+        .profile-picture {
             width: 80px;
             height: 80px;
             border-radius: 50%;
             object-fit: cover;
-            margin-bottom: 20px;
+            cursor: pointer;
+        }
+
+        .profile-pic {
+            transition: opacity 0.3s ease;
+        }
+
+        .profile-pic:hover {
+            opacity: 0.8;
+        }
+
+        .icon,
+        .create-project-icon {
+            cursor: pointer;
+            color: var(--lime-green);
         }
 
         .icon {
             font-size: 1.5rem;
             margin: 15px 0;
-            cursor: pointer;
         }
 
-        .project-count {
+        .create-project-icon {
+            position: relative;
+            font-size: 2rem;
+            margin-right: 15px;
+        }
+
+        .project-count,
+        .toggle-switch {
             display: flex;
             justify-content: space-between;
             align-items: center;
-        }
-
-        .toggle-switch {
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
+            color: var(--white);
         }
 
         .project-grid {
@@ -57,12 +126,13 @@
 
         .project-card {
             flex: 0 0 30%;
-            /* About 1/3 width */
             margin: 1%;
-            border-radius: 15px;
-            background-color: #f9f9f9;
             padding: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            background-color: var(--coral-pink);
+        }
+
+        .project-card:hover {
+            transform: translateY(-5px);
         }
 
         .project-table {
@@ -77,7 +147,12 @@
         }
 
         .project-table th {
-            background-color: #f2f2f2;
+            background-color: var(--coral-pink);
+            color: var(--white);
+        }
+
+        .project-table td {
+            background-color: var(--plum-purple);
         }
 
         .comments-section {
@@ -86,22 +161,13 @@
         }
 
         .comment-card {
-            border-radius: 15px;
-            background-color: #f9f9f9;
             padding: 10px;
+            background-color: var(--coral-pink);
             margin-bottom: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .create-project-icon {
-            position: relative;
-            font-size: 2rem;
-            cursor: pointer;
-            margin-right: 15px;
         }
 
         .close {
-            color: #aaa;
+            color: var(--lime-green);
             float: right;
             font-size: 28px;
             font-weight: bold;
@@ -109,14 +175,13 @@
 
         .close:hover,
         .close:focus {
-            color: black;
+            color: var(--golden-amber);
             text-decoration: none;
             cursor: pointer;
         }
 
         .top-row {
             padding-top: 20px;
-            /* Add more space at the top */
         }
 
         .profile-section {
@@ -125,89 +190,20 @@
         }
 
         .profile-pic-container {
-            background-color: #ffffff;
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             padding: 10px;
             margin-right: 20px;
-        }
-
-        .profile-pic {
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
-            object-fit: cover;
-            cursor: pointer;
-            transition: opacity 0.3s ease;
-        }
-
-        .profile-pic:hover {
-            opacity: 0.8;
         }
 
         .greeting-container {
             width: 100%;
             display: flex;
-            flex-wrap: nowrap;
             flex-direction: column;
         }
 
         .greeting-container h4 {
             margin: 0;
             line-height: 1.2;
-        }
-
-        /* Adjust the button styles */
-        .dashboard-buttons {
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-
-        }
-
-        .btn-dashboard {
-            margin-left: 10px;
-        }
-
-        /* Styles for the profile picture card and responsive design */
-        .top-row {
-            padding-top: 20px;
-        }
-
-        .profile-section {
-            display: flex;
-            align-items: center;
-        }
-
-        .profile-pic-container {
-            background-color: #ffffff;
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 10px;
-            margin-right: 20px;
-        }
-
-        .profile-pic {
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
-            object-fit: cover;
-            cursor: pointer;
-            transition: opacity 0.3s ease;
-        }
-
-        .profile-pic:hover {
-            opacity: 0.8;
-        }
-
-        .greeting-container {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .greeting-container h4 {
-            margin: 0;
-            line-height: 1.2;
+            color: var(--pure-white);
         }
 
         .btn-wrapper {
@@ -216,23 +212,13 @@
             align-items: center;
         }
 
-        .dashboard-buttons {
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-        }
-
-        .btn-dashboard {
-            margin-left: 10px;
-        }
-
         .nav-wrapper {
             position: relative;
         }
 
-        /* Navbar styles */
         .navbar {
             padding: 0.5rem 1rem;
+            background-color: var(--deep-navy);
         }
 
         .navbar-collapse {
@@ -262,7 +248,7 @@
 
         .navbar-toggler:focus {
             outline: none;
-            box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
+            box-shadow: 0 0 0 0.2rem var(--pure-white);
         }
 
         .navbar-toggler.hidden {
@@ -275,6 +261,7 @@
             top: -50px;
             background-color: #ffffff;
             border-radius: 15px;
+            background-color: var(--pure-white);
         }
 
         .nav-item {
@@ -282,15 +269,90 @@
         }
 
         .nav-link {
-            color: #333;
-            transition: color 0.3s ease-in-out;
+            transition: opacity 0.3s ease-in-out;
             font-size: 1.1em;
             padding: 0.25rem;
         }
 
         .nav-link:hover,
         .nav-link:focus {
-            color: #007bff;
+            color: var(--lime-green);
+        }
+
+        .navbar-nav .nav-item .nav-link {
+            color: var(--pure-black) !important;
+        }
+
+        .navbar-nav .nav-item .nav-link:hover,
+        .navbar-nav .nav-item .nav-link:focus {
+            color: var(--golden-amber) !important;
+            background-color: var(--deep-navy);
+        }
+
+        .btn {
+            box-shadow: 0 4px 8px var(--deep-navy);
+            margin-bottom: 5px;
+        }
+
+        .btn-primary {
+            background-color: var(--coral-pink);
+            border-color: var(--coral-pink);
+        }
+
+        .btn-primary:hover {
+            background-color: var(--golden-amber);
+            border-color: var(--golden-amber);
+        }
+
+        .btn-secondary {
+            background-color: var(--plum-purple);
+            border-color: var(--plum-purple);
+        }
+
+        .btn-secondary:hover {
+            background-color: var(--coral-pink);
+            border-color: var(--coral-pink);
+        }
+
+        /*Outer footer styling*/
+        footer {
+            height: fit-content;
+            width: 100%;
+            color: var(--footer-text-color);
+        }
+
+        /*Inner footer styling*/
+        footer>div {
+            font-family: var(--font-for-header-footer);
+            text-align: center;
+            font-weight: 600;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            padding: 15px 5%;
+        }
+
+        /* The icons container */
+        .icons {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            overflow: visible;
+            padding: 0 20px;
+        }
+
+        /* Regular state - Icon size */
+        .icon {
+            color: var(--golden-amber);
+            transition: transform 0.3s ease;
+            margin: 10px;
+        }
+
+        /* Hover state - Icon enlarged */
+        .icon:hover {
+            transform: scale(1.5);
         }
 
         @media (min-width: 768px) {
@@ -318,7 +380,6 @@
             }
         }
 
-        /* Styles for responsive design */
         @media (max-width: 767px) {
             .navbar-collapse:not(.show) {
                 display: none;
@@ -329,17 +390,6 @@
                 justify-content: space-between;
                 align-items: center;
                 flex-wrap: nowrap;
-            }
-
-            .dashboard-buttons {
-                display: none;
-            }
-        }
-
-        /* Styles for the navbar between 768px and 880px*/
-        @media (min-width: 768px) and (max-width: 880px) {
-            .dashboard-buttons {
-                padding-right: 0;
             }
         }
     </style>
@@ -389,26 +439,62 @@
 
         <div class="row">
             <!-- Middle Column, Projects (3/4 width) -->
-            <div class="col-md-9 column">
-                {% block middle_column %}
-                <!-- Your existing middle column content -->
-                {% endblock %}
+            <div class="col-md-9 content-area">
+                <div class="column">
+                    {% block middle_column %}
+                    <!-- Your existing middle column content -->
+                    {% endblock %}
+                </div>
             </div>
 
             <!-- Right Column, Comment section (1/4 width) -->
-            <div class="col-md-3 column comments-section">
-                <h4>Comments</h4>
-                <div class="comment-card">
-                    <p><strong>User:</strong> Comment content...</p>
+            <div class="col-md-3 content-area">
+                <div class="column comments-section">
+                    <h4>Comments</h4>
+                    <div class="comment-card">
+                        <p><strong>User:</strong> Comment content...</p>
+                    </div>
+                    <!-- Add more comment cards as needed -->
                 </div>
-                <!-- Add more comment cards as needed -->
             </div>
         </div>
     </div>
+    <!-- Footer with author information and links -->
+    <footer>
+        <div>
+            <div>
+                Daniil Shaulov
+            </div>
+            <div class="icons">
+                <a href="https://linkedin.com/in/daniil-shaulov-87b5b2198" target="_blank" rel="noopener"
+                    aria-label="Visit my profile on LinkedIn (opens in a new tab)">
+                    <i class="icon fa-brands fa-linkedin fa-2x"></i>
+                </a>
+                <a href="https://github.com/DaSHdotHub?tab=repositories" target="_blank" rel="noopener"
+                    aria-label="Visit my GitHub page (opens in a new tab)">
+                    <i class="icon fa-brands fa-github fa-2x"></i>
+                </a>
+                <a href="https://xing.com/profile/Daniil_Shaulov/" target="_blank" rel="noopener"
+                    aria-label="Visit my profile on Xing (opens in a new tab)">
+                    <i class="icon fa-brands fa-xing fa-2x"></i>
+                </a>
+            </div>
+            <div>
+                © 2024
+            </div>
+        </div>
+    </footer>
     <!-- Bootstrap and jQuery JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/8553d96c4f.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
     <script>
