--- a/project_tracker/templates/project/project_edit.html
+++ b/project_tracker/templates/project/project_edit.html
@@ -58,7 +58,7 @@
 
     .task-card {
         border-radius: 10px;
-        background-color: #f9f9f9;
+        background-color: var(--golden-amber);
         padding: 10px;
         margin-bottom: 10px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
