--- a/project_tracker/templates/authentication/index.html
+++ b/project_tracker/templates/authentication/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProjectTracker Home</title>
     <!--Montserrat + Roboto font-->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Roboto:wght@300;400;700&display=swap"
+        rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* Color palette */
@@ -32,7 +34,13 @@
             font-family: 'Roboto', sans-serif;
         }
 
-        h1, h2, h3, h4, h5, h6, .navbar-brand {
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6,
+        .navbar-brand {
             font-family: 'Montserrat', sans-serif;
         }
 
@@ -105,6 +113,27 @@
 
         .icon:hover {
             transform: scale(1.5);
+        }
+
+        /* Custom styles for smaller screens */
+        @media (max-width: 768px) {
+            .row {
+                margin-left: 0;
+                margin-right: 0;
+            }
+
+            .col-md-4 {
+                margin-bottom: 10px;
+            }
+
+            .container {
+                padding-left: 10px;
+                padding-right: 10px;
+            }
+
+            .central-image {
+                margin: 10px 0;
+            }
         }
     </style>
 </head>
